correctly loading 4 arms and 1 body, not yet like URDF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
 
-# Eigen
+# ============================================================
+# 🔹 Eigen
+# ============================================================
 FetchContent_Declare(
   eigen
   GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
@@ -14,15 +16,19 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(eigen)
 
-# Polyscope (updated tag)
+# ============================================================
+# 🔹 Polyscope (viewer)
+# ============================================================
 FetchContent_Declare(
   polyscope
   GIT_REPOSITORY https://github.com/nmwsharp/polyscope.git
-  GIT_TAG v2.2.1   # ✅ valid as of 2025
+  GIT_TAG v2.2.1
 )
 FetchContent_MakeAvailable(polyscope)
 
-# tinyobjloader (per leggere STL/OBJ)
+# ============================================================
+# 🔹 tinyobjloader (eventuale supporto OBJ)
+# ============================================================
 FetchContent_Declare(
   tinyobjloader
   GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader.git
@@ -30,12 +36,41 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(tinyobjloader)
 
-add_executable(morphy_viewer main.cpp)
-target_link_libraries(morphy_viewer PRIVATE polyscope Eigen3::Eigen tinyobjloader)
-
-
+# ============================================================
+# 🔹 Assimp (robusto import di STL binari/ASCII)
+# ============================================================
 find_package(assimp REQUIRED)
-target_link_libraries(morphy_viewer PRIVATE assimp)
 
-find_package(urdfdom REQUIRED)
-target_link_libraries(morphy_viewer PRIVATE urdfdom_model urdfdom_world)
+# ============================================================
+# 🔹 urdfdom (lettura URDF)
+#  - Su Ubuntu 24.04 ARM64 i file non esportano i cmake targets,
+#    quindi aggiungiamo manualmente gli include path e le librerie
+# ============================================================
+include_directories(/usr/include)
+include_directories(/usr/include/urdfdom_headers)
+include_directories(/usr/include/urdfdom)
+include_directories(/usr/include/urdf_parser)
+
+# Verifica librerie
+find_library(URDFDOM_MODEL_LIB urdfdom_model REQUIRED)
+find_library(URDFDOM_WORLD_LIB urdfdom_world REQUIRED)
+
+# ============================================================
+# 🔹 Executable
+# ============================================================
+add_executable(morphy_viewer main.cpp)
+
+target_link_libraries(morphy_viewer PRIVATE
+    polyscope
+    Eigen3::Eigen
+    tinyobjloader
+    assimp
+    ${URDFDOM_MODEL_LIB}
+    ${URDFDOM_WORLD_LIB}
+)
+
+# ============================================================
+# 🔹 Messaggio di configurazione
+# ============================================================
+message(STATUS "URDFDOM model lib: ${URDFDOM_MODEL_LIB}")
+message(STATUS "URDFDOM world lib: ${URDFDOM_WORLD_LIB}")
