--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,13 @@ Size=400,400
 
 [Window][Polyscope]
 Pos=10,10
-Size=305,156
+Size=305,526
 
 [Window][Structures]
-Pos=10,186
-Size=305,524
+Pos=10,556
+Size=305,154
+
+[Window][Controls]
+Pos=325,10
+Size=440,378
 
