--- a/imgui.ini
+++ b/imgui.ini
@@ -14,3 +14,11 @@ Size=305,524
 Pos=325,10
 Size=440,378
 
+[Window][##Command UI]
+Pos=770,10
+Size=500,42
+
+[Window][WARNING]
+Pos=340,303
+Size=600,114
+
