--- a/imgui.ini
+++ b/imgui.ini
@@ -4,21 +4,25 @@ Size=400,400
 
 [Window][Polyscope]
 Pos=10,10
-Size=305,156
+Size=305,378
 
 [Window][Structures]
-Pos=10,186
-Size=305,524
+Pos=10,408
+Size=305,683
 
 [Window][Controls]
 Pos=325,10
 Size=440,378
 
 [Window][##Command UI]
-Pos=770,10
+Pos=1410,10
 Size=500,42
 
 [Window][WARNING]
 Pos=340,303
 Size=600,114
+
+[Window][Selection]
+Pos=1410,72
+Size=500,98
 
