--- a/imgui.ini
+++ b/imgui.ini
@@ -4,18 +4,18 @@ Size=400,400
 
 [Window][Polyscope]
 Pos=10,10
-Size=305,378
+Size=305,156
 
 [Window][Structures]
-Pos=10,408
-Size=305,683
+Pos=10,186
+Size=305,524
 
 [Window][Controls]
 Pos=325,10
 Size=440,378
 
 [Window][##Command UI]
-Pos=1410,10
+Pos=770,10
 Size=500,42
 
 [Window][WARNING]
@@ -23,6 +23,14 @@ Pos=340,303
 Size=600,114
 
 [Window][Selection]
-Pos=1410,72
+Pos=1290,72
 Size=500,98
+
+[Window][Scene]
+Pos=60,60
+Size=178,82
+
+[Window][Scene Final]
+Pos=60,60
+Size=178,82
 
