--- a/model/drone_parameters.yaml
+++ b/model/drone_parameters.yaml
@@ -1,11 +1,18 @@
 base_frame: base_link
-integrator: irk # options: explicit_euler, implicit_euler, rk4, irk
+integrator: explicit_euler # options: explicit_euler, implicit_euler, rk4, irk
 integrator_settings:
   dt: 0.002
   substeps: 5
   implicit_max_iterations: 8
   implicit_tolerance: 1.0e-6
   implicit_fd_epsilon: 1.0e-6
+
+# Posizione iniziale
+x0_pos: [0.0, 0.0, 0.5]
+
+# Rotazione iniziale: 90° attorno all'asse Y (pitch) - drone "di faccia"
+# Quaternione wxyz: [cos(45°), 0, sin(45°), 0] = [0.7071, 0, 0.7071, 0]
+x0_rotation: [1, 0.0, 0.0, 0.0]
 
 mass:
   total: 0.260
@@ -27,8 +34,8 @@ inertia:
   B_Izz_B: 0.0020
 
 morphing_joint:
-  b_joint: 0.01
-  k_joint: 1.0
+  b_joint: 0.1
+  k_joint: 1.5
 
 transforms:
   T_BH:
